src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-18.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=en\")"
---
items:
  - loc: "#units order=en"
    locs:
      directive: "#units"
    options:
      - loc: order=en
        locs:
          option: order
          order: en
        option: RectilinearOrder
        order:
          - Easting
          - Northing
    type: UnitsDirective
