src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-180.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=-2p\")"
---
items:
  - loc: "#units incvb=-2p"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Percent
          value: -2
        loc: incvb=-2p
        locs:
          correction: "-2p"
          option: incvb
        option: BacksightInclinationCorrection
    type: UnitsDirective
