src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-182.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=g incvb=2m\")"
---
items:
  - loc: "#units vb=g incvb=2m"
    locs:
      directive: "#units"
    options:
      - loc: vb=g
        locs:
          option: vb
          unit: g
        option: BacksightInclinationUnit
        unit: Grads
      - correction:
          unit: Mils
          value: 2
        loc: incvb=2m
        locs:
          correction: 2m
          option: incvb
        option: BacksightInclinationCorrection
    type: UnitsDirective
