src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-187.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inch=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units inch="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: inch
              option: HeightAdjustment
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing length
    severity: Error
