src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-188.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inch=2\")"
---
items:
  - loc: "#units inch=2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Meters
          value: 2
        loc: inch=2
        locs:
          correction: "2"
          option: inch
        option: HeightAdjustment
    type: UnitsDirective
